--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
                             <finalName>main</finalName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ru.job4j.Main</mainClass>
+                                    <mainClass>ru.job4j.tracker.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
