add Con loadCon and change ver doc.yaml

--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
-        <!--suppress UnresolvedMavenProperty -->
-        <docker_db_url_jdbc>${JDBC_URL}</docker_db_url_jdbc>
+        <docker.db.url.jdbc>${JDBC_URL}</docker.db.url.jdbc>
     </properties>
     <profiles>
         <profile>
